# MileStone2

./: BFS.cpp  BFS.h  BasicState.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CellMatrix.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MatrixCLientHandler.cpp  MatrixCLientHandler.h  MatrixCacheManager.cpp  MatrixCacheManager.h  MyParallelServer.cpp  MyParallelServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  MyserialServer.cpp  MyserialServer.h  Node.h  PathInMatrix.cpp  PathInMatrix.h  PointMatrix.cpp  PointMatrix.h  PriorityQueue.h  README.md  Searchable.h  Searcher.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  boot.h  main.cpp  server_side.h
ServersInterfaces/: CacheManager.h  ClientHandler.h  Solver.h  boot.h  server_side.h
